# ChangeLog for sci-electronics/gplcver
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sci-electronics/gplcver/ChangeLog,v 1.11 2013/05/15 04:10:31 patrick Exp $

  15 May 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Fix metadata.xml

  22 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gplcver-2.12a.ebuild:
  Add ~amd64, wrt bug #439326

  12 Feb 2008; Denis Dupeyron <calchan@gentoo.org> gplcver-2.12a.ebuild:
  Fixed typos, thanks to Triffid Hunter (bug #209923).

*gplcver-2.12a (16 Sep 2007)

  16 Sep 2007; Denis Dupeyron <calchan@gentoo.org> +gplcver-2.12a.ebuild:
  Version bump, thanks to Luis Vitorio Cargnini (bug #187067).

  12 Aug 2006; Chris Bainbridge <chrb@gentoo.org> -gplcver-1.10j.ebuild,
  -gplcver-2.10c.ebuild, gplcver-2.11a.ebuild:
  stable on x86. remove old ebuilds.

  02 Jul 2006; Denis Dupeyron <calchan@gentoo.org> metadata.xml:
  Adjusted metadata, see bug #138062.

*gplcver-2.11a (22 Sep 2005)

  22 Sep 2005; Chris Bainbridge <chrb@gentoo.org> +gplcver-2.11a.ebuild:
  Version bump, bug #103738, thanks to David Carr for being patient!

*gplcver-2.10c (22 May 2005)

  22 May 2005; Chris Bainbridge <chrb@gentoo.org> +gplcver-2.10c.ebuild:
  Version bump, bug #91694.

  06 May 2005; David Holm <dholm@gentoo.org> gplcver-1.10j.ebuild:
  Added to ~ppc.

*gplcver-1.10j (27 Dec 2004)

  27 Dec 2004; Olivier Fisette <ribosome@gentoo.org> +metadata.xml,
  +gplcver-1.10j.ebuild:
  Moved from app-sci/gplcver to sci-electronics/gplcver.

*gplcver-1.10j (26 Jul 2004)

  26 Jul 2004; Chris Bainbridge <chrb@gentoo.org> +gplcver-1.10j.ebuild:
  New package submitted by Brian Korsedal, bug #35370