@@ -1,6 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST gplcver-2.11a.src.tar.bz2 1189439 SHA256 b64eea22f354bee2de09532309c6a1e3f3658c427fe2d063ef3921c1042fa380
 DIST gplcver-2.12a.src.tar.bz2 1224470 SHA256 f7d94677677f10c2d1e366eda2d01a652ef5f30d167660905c100f52f1a46e75 SHA512 62835fd32c37865590c56e4e04cdd2b1e0918551a927fafe35a2b0838082af2af903e714d2afc0f28d76eb5c077e5b3f56cbf671dee5f38717ddea68a35753e5 WHIRLPOOL 55f681d8f52fff0637b2e9ba93c9c1551353a21a064a71d5f269a20bbf1d400837512809eeadc083f3f18595a510182bd0227ad9662d4d33d83efd81a3bd2e3f
 EBUILD gplcver-2.11a.ebuild 1510 SHA256 26b1e188a4786e18a1960a1a11116be468c4c65956807b4489c28504cb66b64a SHA512 4d7811c88ae7478346d90f93e8e2ae13312f1a7a88267fa1010dd1bf5b57a47b94e17c517126c1010cf91f8f24d7b493a93dab2c631b90cfadc6450cb8064011 WHIRLPOOL cbd69f4fc377004804a4168a3cd4c5990659b3e9ed6af100dcf6f32973c4eca62f94080a1cbdb7cefc9d0ade8bcbf10b2b92dce93c5931258aa5b8e100aefe30
-EBUILD gplcver-2.12a.ebuild 1676 SHA256 438dbb8ec7f39b7e4284d15ee33fc713e02b85d466883b7bdd543857d6bb9543 SHA512 309d4995a8556abc012ee1eb2905e7608c6958959e568bf47f06c9d3e086db757388a9fda75a6f0d41461994679c849b1bdf17f02aa7d0b1a3972a539e8cbe15 WHIRLPOOL f91d4d913173a485615d984b967dabb78300d8f0a4f990e0421679378051fd60f6efd09b3ebbded67f5f0e5676c99fc6c3dbf16f688fb213cf469891687bc321
-MISC ChangeLog 1694 SHA256 bc6f7140fbaafa1f24cac1dbf086cbc67b0c02f33628b4779affb32682451f78 SHA512 8e347fcc64df7609a9dc895180d5e276b7eed952265a0df0120705b34be72e770397281459e0a6d6445f86fdde25966991982fcda48bd0f1863bb3e04842e9c5 WHIRLPOOL ce87693b4b8a757a5ca1ba8273cd7ffb6ebd4ecd8f78aeeef55beca31b479ba86dda778cec5ac01578345fa8b27a51da6d16f82382b450f92e54df0750219c42
+EBUILD gplcver-2.12a.ebuild 1681 SHA256 4f43d0c36645d84ea02bf4c39273e4d6b41a0d2874ff88306ce5aac815f68d7f SHA512 9e3554f93316d1287beaaf1b1c55dc1f5825873bbd881fa3d1e4e2d35e4937a52b4fb65adf96ae22dedbbc3a0d11566d14810fcd2b7ab68879457b89ae7f947b WHIRLPOOL 94bb0f0ef47c0ec0f0449cb42d6767645eeb23e2bf6b07cd5e1273df83c0bce6057f403ce6d86e7f14175b9d20723242e41e6b64f078d73bfba06acbef8e17b0
+MISC ChangeLog 1819 SHA256 4a694cef59e70f8f5c71197ab44a2e492ee2657fdd6d936ccd7be6c16d75e731 SHA512 47c5d2a7d458bbd9354a9acd75da0d166f40b98494bbb61f572d71e04fab4e672844eb5b3a7fb8a0a3c94495048c6662c8bf265642162fe06c95abfe4f9b24a1 WHIRLPOOL d9ec33943a4d21993bc3a136c76ff4818251e6196eb0de7246926fd6db594b1b4ccc19ebece982d220bcb748a2e2790ffc28114bf7349b391a2738c516255692
 MISC metadata.xml 546 SHA256 df575fe9e37e18a7bdbd82366dbeff62e9f7488883078b499f1f07ddd88b55e9 SHA512 2dc0071c6b7146e988400cbe2fa4e659e47e65a2946ad0ed86a456f99f1fc873e1215f1060a0c7fcf3915a25ca9c30cbb3051c3c0e3b8725081b596618353575 WHIRLPOOL 93773ecb8df8b4a279211c9c971d88c9c1abe85fb0dfcdbd38ce6d065d68bc9b3602ea633e1a7906dfef73e6ecde198d8fe38a476b2c290ad1f7b8a11529ef78
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEYEAREIAAYFAlTIeM8ACgkQQe4uqXYgU9WxogCgzjl4pMf0CbVsw3krdIqUM5EJ
+9FAAnj0EtgKXG6FZ/abfuOMDvwR37kuc
+=A1Zl
+-----END PGP SIGNATURE-----
