@@ -1,11 +1,11 @@
-# Copyright 1999-2012 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/gplcver/gplcver-2.12a.ebuild,v 1.3 2012/10/22 21:49:21 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/gplcver/gplcver-2.12a.ebuild,v 1.4 2015/01/28 05:51:04 tomjbe Exp $
 
 MY_PN=gpl-cver
 
 DESCRIPTION="Verilog simulator"
-HOMEPAGE="http://www.pragmatic-c.com/${MY_PN}"
+HOMEPAGE="http://sourceforge.net/projects/${PN}"
 SRC_URI="http://www.pragmatic-c.com/${MY_PN}/downloads/${P}.src.tar.bz2"
 LICENSE="GPL-2"
 SLOT="0"
