@@ -1,6 +1,9 @@
 # ChangeLog for sci-electronics/gplcver
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-electronics/gplcver/ChangeLog,v 1.11 2013/05/15 04:10:31 patrick Exp $
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sci-electronics/gplcver/ChangeLog,v 1.12 2015/01/28 05:51:04 tomjbe Exp $
+
+  28 Jan 2015; Thomas Beierlein <tomjbe@gentoo.org> gplcver-2.12a.ebuild:
+  Switch homepage to sourceforge.net (bug #533800)
 
   15 May 2013; Patrick Lauer <patrick@gentoo.org> metadata.xml:
   Fix metadata.xml
